# MSTmap-Python

./: .gitignore  CMakeLists.txt  README.md  example.txt  example_noargs.txt  linkage_group_struct.h  main.cpp  mstmap.cpp  mstmap.h  output.txt  pyproject.toml  restart.sh  sample.txt  setup.py
.github/workflows/: build.yml  python-app.yml
data/: CB27xBB_input_94lines.txt  SNPs_QC_SanzixVita7.txt
src/: mstmap.cpp  mstmap.pyx  mstmap_main.cpp
